<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#afcbd7"
    tools:context=".WinActivity">

    <TextView
        android:id="@+id/win_text"
        android:layout_width="410dp"
        android:layout_height="98dp"
        android:layout_marginTop="56dp"
        android:gravity="center"
        android:text="@string/win_text"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="305dp"
        android:layout_height="409dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="127dp"
        android:contentDescription="@string/winimg_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/win_text"
        app:srcCompat="@drawable/win" />

    <Button
        android:id="@+id/button3"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:background="#FF9800"
        android:onClick="onClick"
        android:text="@string/button_new"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903" />

</androidx.constraintlayout.widget.ConstraintLayout>